# 1brc

./: .gitignore  1brc.cabal  README.md  flake.nix
