cabal-version:   3.4
name:            1brc
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Arnau Abella
maintainer:      arnau.abella@monadplus.pro
build-type:      Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  MyLib
  build-depends:    base >=4.16 && <5.0

executable 1brc
  import:           warnings
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , 1brc
    , base  >=4.16 && <5.0
